--- a/app/src/main/res/layout/activity_custom_message.xml
+++ b/app/src/main/res/layout/activity_custom_message.xml
@@ -9,6 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.itpteam11.visualisemandai.CustomMessageActivity">
+
     <ScrollView
         android:id="@+id/scrollview_message"
         android:layout_width="fill_parent"
@@ -41,9 +42,44 @@
         android:layout_height="wrap_content"
         android:text="Next"
         android:id="@+id/button_next"
+        android:drawableTint="#27a890"
         android:layout_below="@+id/scrollview_message"
-        android:layout_centerHorizontal="true"
-        android:drawableTint="#27a890" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/button_camera"
+        android:background="@android:drawable/ic_menu_camera"
+        android:layout_alignTop="@+id/button_next"
+        android:layout_toLeftOf="@+id/button_next"
+        android:layout_toStartOf="@+id/button_next" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageview_picture"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/textview_images"
+        android:layout_alignParentStart="true"
+        android:longClickable="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/textview_images"
+        android:layout_alignParentTop="false"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/button_next"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="3dp"
+        android:longClickable="true" />
 
 
 </RelativeLayout>
