--- a/app/src/main/res/layout/fragment_send_notification.xml
+++ b/app/src/main/res/layout/fragment_send_notification.xml
@@ -5,6 +5,85 @@
     tools:context="com.itpteam11.visualisemandai.SendNotificationFragment"
     android:id="@+id/send_notification_container">
 
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="10dp">
+
+        <ScrollView
+            android:id="@+id/scrollview_message"
+            android:layout_width="fill_parent"
+            android:layout_height="150dip"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:scrollIndicators="top|bottom"
+            android:background="@drawable/text_area_box">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:ems="10"
+                android:id="@+id/edit_text_message"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignBottom="@+id/ScrollView01"
+                android:nestedScrollingEnabled="true"
+                android:editable="true"
+                android:hint="Type your message here"
+                android:background="@android:color/transparent"
+                android:allowUndo="false"
+                android:padding="4dp" />
+        </ScrollView>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Next"
+            android:id="@+id/button_next"
+            android:drawableTint="#27a890"
+            android:layout_below="@+id/scrollview_message"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_camera"
+            android:background="@android:drawable/ic_menu_camera"
+            android:layout_alignTop="@+id/button_next"
+            android:layout_toLeftOf="@+id/button_next"
+            android:layout_toStartOf="@+id/button_next" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageview_picture"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/textview_images"
+            android:layout_alignParentStart="true"
+            android:longClickable="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:id="@+id/textview_images"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/button_next"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="3dp"
+            android:longClickable="true" />
+    </RelativeLayout>
+
+    <!--
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,5 +105,6 @@
         android:layout_marginTop="10dp"
         android:drawableTint="#27a890"
         android:background="#5de0c8" />
+    -->
 
 </FrameLayout>
