--- a/app/src/main/res/layout/fragment_send_notification.xml
+++ b/app/src/main/res/layout/fragment_send_notification.xml
@@ -23,7 +23,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textMultiLine"
+                android:inputType="textCapSentences|textMultiLine"
                 android:ems="10"
                 android:id="@+id/edit_text_message"
                 android:layout_alignParentTop="true"
