--- a/app/src/main/res/layout/activity_custom_message_recipients.xml
+++ b/app/src/main/res/layout/activity_custom_message_recipients.xml
@@ -9,15 +9,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.itpteam11.visualisemandai.CustomMessageRecipientsActivity">
 
-    <ListView
-        android:id="@+id/listViewRecipients"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:focusable="false"
-        android:divider="#000"
-        android:dividerHeight="0.8dp"/>
-
     <Button
         android:id="@+id/buttonSend"
         android:layout_width="match_parent"
@@ -25,8 +16,28 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:background="@color/button_backgroundcolor"
-        android:textColor="@color/button_textcolor"
         android:focusable="false"
-        android:text="Send"/>
+        android:text="Send"
+        android:textColor="@color/button_textcolor" />
+
+    <ListView
+        android:id="@+id/listViewRecipients"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:divider="#000"
+        android:dividerHeight="0.8dp"
+        android:focusable="false"
+        android:layout_above="@+id/buttonSend"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/textViewNoRecipients"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
